--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ body {
 
 <div class="sidenav">
  <a href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#projects">Projects</a>
-  <a href="#resume">Resume</a>
-  <a href="#contact">Contact</a>
+  <a href="about.html">About</a>
+  <a href="projects.html">Projects</a>
+  <a href="resume.html">Resume</a>
+  <a href="contact">Contact</a>
     <a href="#skills">Skills</a>
 </div>
 
