--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 <body>
 
 <div class="sidenav">
- <a href="#home">Home</a>
+ <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="projects.html">Projects</a>
   <a href="resume.html">Resume</a>
