--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ body {
  <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="projects.html">Projects</a>
-  <a href="resume.html">Resume</a>
-  <a href="contact">Contact</a>
+  <a href="resume.pdf">Resume</a>
+  <a href="contact.html">Contact</a>
     <a href="#skills">Skills</a>
 </div>
 
