--- a/portfolio.html
+++ b/portfolio.html
@@ -55,9 +55,9 @@
                   <div class="col-lg-4 mb-4">
                     <div class="card">
                         <img class="card-img-top" src="imgs/portfolio.png" alt="">
-                        <div c   lass="card-body">
-                            <h5 class="card-title">PORTFOLIO</h5>
-                            <p class="card-text">Lorem ipsum dolor, Lorem ipsum dolor 
+                        <div class="card-body">
+                            <h5> class="card-title">PORTFOLIO</h5>
+                            <p> class="card-text">Lorem ipsum dolor, Lorem ipsum dolor 
                             </p>
                       
                             <a href="https://elvish-fluid.000webhostapp.com/" class="btn btn-outline-success btn-sm">Look</a>
