--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
              <a class="nav-link" href="portfolio.html">Portfolio</a>
               <a class="nav-link" href="resume.html">Resume</a>
                      <a class="nav-link" href="about.html">About</a>
-         <a class="nav-link" href="contact.html">Contact</a>
+         <a> class="nav-link" href="contact.html">Contact</a>
         
         </div>
     </nav>
@@ -40,9 +40,9 @@
   
 
     <section id="header" class="jumbotron text-center">
-        <h1 class="display-3">Yordanos' Projects Home&nbsp;</h1>
-        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
-        <a href="contact.html" class="btn btn-primary">&nbsp; Connect With Me&nbsp; &nbsp;&nbsp;</a>
+        <h1> class="display-3">Yordanos' Projects Home&nbsp;</h1>
+        <p> class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
+        <a> href="contact.html" class="btn btn-primary">&nbsp; Connect With Me&nbsp; &nbsp;&nbsp;</a>
     <a href="resume.pdf" target="_blank" class="btn btn-success">&nbsp; Download Resume&nbsp; &nbsp;</a>
     </section>
 	
