Update and rename projects1.html to projects.html

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="home.html">Home</a>
               <!-- <a class="nav-link" href="portfolio_final.html">Portfinal</a> -->
              <a class="nav-link" href="portfolio.html">Portfolio</a>
-              <a class="nav-link" href="resume.html">Resume</a>
+              <a class="nav-link" href="resume.html">Resume</a>     
                      <a class="nav-link" href="about.html">About</a>
          <a class="nav-link" href="contact.html">Contact</a>
         
@@ -60,7 +60,7 @@
                             <p class="card-text">Lorem ipsum dolor, Lorem ipsum dolor 
                             </p>
                       
-                            <a href="" class="btn btn-outline-success btn-sm">Look</a>
+                            <a href="https://elvish-fluid.000webhostapp.com/" class="btn btn-outline-success btn-sm">Look</a>
                            <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                         <div class="card-body">
                             <h5 class="card-title">LOVE SELF</h5>
                             <p class="card-text">Self love, self esteem, self regard and self care. What is it? Why be it? How to get there, stay stay there and feel ok with loving you self first and foremost.</p>
-                            <a href="" class="btn btn-outline-success btn-sm">Look</a>
+                            <a href="https://loveself.000webhostapp.com/" class="btn btn-outline-success btn-sm">Look</a>
                           <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                             <h5 class="card-title">BLOG</h5>
                             <p class="card-text">Lorem ipsum dolor, Lorem ipsum dolor, Lorem ipsum dolor, Lorem ipsum dolor Lorem ipsum dolor, Lorem ipsum dolor 
                               </p>
-                            <a href="" class="btn btn-outline-success btn-sm">Look</a>
+                            <a href="https://wild-morning-4201.bss.design/" class="btn btn-outline-success btn-sm">Look</a>
                              <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
                         </div>
                     </div>
