--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
                     <div class="card">
                         <img class="card-img-top" src="imgs/portfolio.png" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">PORTFOLIO</h5>
+                            <h5> class="card-title">PORTFOLIO</h5>
                             <p class="card-text">Lorem ipsum dolor, Lorem ipsum dolor 
                             </p>
                       
