--- a/projects.html
+++ b/projects.html
@@ -57,10 +57,10 @@
                         <img class="card-img-top" src="imgs/portfolio.png" alt="">
                         <div class="card-body">
                             <h5> class="card-title">PORTFOLIO</h5>
-                            <p class="card-text">Lorem ipsum dolor, Lorem ipsum dolor 
+                            <p> class="card-text">Lorem ipsum dolor, Lorem ipsum dolor 
                             </p>
                       
-                            <a href="https://elvish-fluid.000webhostapp.com/" class="btn btn-outline-success btn-sm">Look</a>
+                            <a href="https://elvish-fluid.000webhostapp.com/"  target="_blank"> class="btn btn-outline-success btn-sm">Look</a>
                            <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
                         </div>
                     </div>
