--- a/projects.html
+++ b/projects.html
@@ -83,8 +83,8 @@
                     <div class="card">
                         <img class="card-img-top" src="imgs/blog.png" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">BLOG</h5>
-                            <p class="card-text">Lorem ipsum dolor, Lorem ipsum dolor, Lorem ipsum dolor, Lorem ipsum dolor Lorem ipsum dolor, Lorem ipsum dolor 
+                            <h5> class="card-title">BLOG</h5>
+                            <p> class="card-text">Lorem ipsum dolor, Lorem ipsum dolor, Lorem ipsum dolor, Lorem ipsum dolor Lorem ipsum dolor, Lorem ipsum dolor 
                               </p>
                             <a href="https://wild-morning-4201.bss.design/"  target="_blank"> class="btn btn-outline-success btn-sm">Look</a>
                              <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
