--- a/projects.html
+++ b/projects.html
@@ -57,10 +57,9 @@
                         <img class="card-img-top" src="imgs/portfolio.png" alt="">
                         <div class="card-body">
                             <h5> class="card-title">PORTFOLIO</h5>
-                            <p> class="card-text">Lorem ipsum dolor, Lorem ipsum dolor 
-                            </p>
+                            <p> class="card-text">Lorem ipsum dolor, Lorem ipsum dolor</p>
                       
-                            <a href="https://elvish-fluid.000webhostapp.com/"  target="_blank"> class="btn btn-outline-success btn-sm">Look</a>
+   <a href="https://elvish-fluid.000webhostapp.com/"  target="_blank"> class="btn btn-outline-success btn-sm">Look</a>
                            <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
                         </div>
                     </div>
@@ -72,7 +71,7 @@
                         <img class="card-img-top" src="imgs/loveself.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">LOVE SELF</h5>
-                            <p class="card-text">Self love, self esteem, self regard and self care. What is it? Why be it? How to get there, stay stay there and feel ok with loving you self first and foremost.</p>
+                            <p> class="card-text">Self love, self esteem, self regard and self care. What is it? Why be it? How to get there, stay stay there and feel ok with loving you self first and foremost.</p>
                             <a href="https://loveself.000webhostapp.com/" class="btn btn-outline-success btn-sm"  target="_blank">Look</a>
                           <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
                         </div>
