--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
              <a class="nav-link" href="portfolio.html">Portfolio</a>
               <a class="nav-link" href="resume.html">Resume</a>
                      <a class="nav-link" href="about.html">About</a>
-         <a> class="nav-link" href="contact.html">Contact</a>
+         <a class="nav-link" href="contact.html">Contact</a>
         
         </div>
     </nav>
@@ -40,9 +40,9 @@
   
 
     <section id="header" class="jumbotron text-center">
-        <h1> class="display-3">Yordanos' Projects Home&nbsp;</h1>
-        <p> class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
-        <a> href="contact.html" class="btn btn-primary">&nbsp; Connect With Me&nbsp; &nbsp;&nbsp;</a>
+        <h1 class="display-3">Yordanos' Projects Home&nbsp;</h1>
+        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
+        <a href="contact.html" class="btn btn-primary">&nbsp; Connect With Me&nbsp; &nbsp;&nbsp;</a>
     <a href="resume.pdf" target="_blank" class="btn btn-success">&nbsp; Download Resume&nbsp; &nbsp;</a>
     </section>
 	
@@ -56,8 +56,8 @@
                     <div class="card">
                         <img class="card-img-top" src="imgs/portfolio.png" alt="">
                         <div class="card-body">
-                            <h5> class="card-title">PORTFOLIO</h5>
-                            <p> class="card-text">Lorem ipsum dolor, Lorem ipsum dolor 
+                            <h5 class="card-title">PORTFOLIO</h5>
+                            <p class="card-text">Lorem ipsum dolor, Lorem ipsum dolor 
                             </p>
                       
                             <a href="https://elvish-fluid.000webhostapp.com" class="btn btn-outline-success btn-sm">Look</a>
