--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {
 <div class="sidenav">
  <a href="index.html">Home</a>
   <a href="about.html">About</a>
-  <a href="portfolio.html" target="_blank">Portflio</a>
+  <a href="portfolio.html" target="_blank">Portfolio</a>
   <a href="resume.pdf">Resume</a>
   <a href="contact.html">Contact</a>
     <a href="#skills">Skills</a>
