--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         <div class="container">
             <a href="" class="navbar-brand"><i class="fas fa-heart mr-2"></i>YMB</a>
               
-            <a class="nav-link" href="home.html">Home</a>
+                    <!--  <a class="nav-link" href="home.html">Home</a>
               <!-- <a class="nav-link" href="portfolio_final.html">Portfinal</a> -->
              <a class="nav-link" href="portfolio.html">Portfolio</a>
               <a class="nav-link" href="resume.html">Resume</a>
