--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: blue;
+  background-color: black;
   overflow-x: hidden;
   padding-top: 20px;
 }
