--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ body {
 </div>
 
 <div class="main">
-    
-  <h1>Yordanos Mathewos</h1>
-   <p>Software Engineer </p>
+    <h1 style="text-align:center;">Yordanos Mathewos</h1>
+<h2 style="text-align:center;">Software Engineer </h2>
+ 
   <p>Scroll down the page to see the result.</p>
     
   <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
