--- a/index.html
+++ b/index.html
@@ -193,7 +193,119 @@ body {
   <p>&nbsp;</p><p style="text-align:center; border-style: solid;">Software Engineer |NYC| Experience Architect&nbsp; &nbsp; &nbsp;</p>
   </div>
   <div>
-  <p>&nbsp;</p>
+ <pre>SKILLS
+Skill List
+Javascript 
+Product Management
+Java
+Sales and Marketing
+iOS Development
+CSS
+Project Management
+Android
+MySQL
+Social Media Marketing
+HTML
+HTML5 & CSS3
+Web Development
+Business Strategy
+Linux
+Business Operations
+Sales Strategy and Management
+Graphic Design
+Product Marketing
+Agile
+User Experience Design
+Query
+Web Design
+Fundraising
+Agile methodology
+Product
+SCRUM
+Online Marketing
+System Integration
+Mobile 
+User Interface Design
+Objective 
+
+Project Manager 
+QA Tester
+QA Engineer
+User Researcher
+Creative Director
+Software Engineer
+Frontend Engineer
+Mobile Developer
+Software Architect
+UI/UX Designer
+Data Scientist
+
+Preferred Location 
+
+Silicon Valley
+Europe
+San Francisco
+London
+Los Angeles
+Boston
+Toronto
+Texas
+France
+Austin
+Chicago
+Mumbai
+Palo Alto
+Seattle
+Berlin
+Vancouver
+Washington DC
+Netherlands
+Denver
+San Diego
+Spain
+Switzerland
+Cambridge
+Orange County
+Italy
+Portland
+Dallas
+Austria
+Belgium
+Denmark
+Houston
+Boulder
+New Delhi
+Ireland
+Poland
+Delhi
+Sweden
+Estonia
+Portugal
+Phoenix
+Pasadena
+Would Consider
+
+Full-Stack Engineer
+Backend Engineer
+Sales
+Business Development
+Marketing
+Sales Development Representative
+DevOps
+Growth Hacker
+Marketing Manager
+Product Manager
+Engineering Manager
+Account Executive
+Account Manager
+Sales Manager
+Designer
+Content Creator
+BD Manager
+Visual Designer
+
+
+ </pre>
 </div>
 </div>
 	
