--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ body {
   </div>
   <div>
  <pre>SKILLS
-Skill List
+
 Javascript 
 Product Management
 Java
@@ -240,7 +240,7 @@ Software Architect
 UI/UX Designer
 Data Scientist
 
-Preferred Location 
+PREFERRED LOCATION
 
 Silicon Valley
 Europe
@@ -283,7 +283,8 @@ Estonia
 Portugal
 Phoenix
 Pasadena
-Would Consider
+
+WOULD CONSIDER
 
 Full-Stack Engineer
 Backend Engineer
