--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body {
 <hr>
 <p style="text-align:center;" border-style:sold;>&nbsp;</p>
   <p style="text-align:center;" border-style:sold;>I’m Yordanos,  a software engineer. I live in New York. I am a fan of technology, design, and web development . I’m also interested in health, innovation and education. I have worked as a model, a nurse , an actor and a tech recruiter. I would like to use my extensive  &amp; diverse work experience to help bring your mission to completion.</p>
-  <p style="text-align:center;" border-style:sold;> I have a proven ablity to learn &amp; an innate passion for service.  What interesting projects are you working? What inspired goals do you have? I want to help you &amp; your team bring them to life. <a href="contact.html" target="_blank">Contact</a> me &amp; download my <a href="resume.pdf" download="Yordanos' Resume PDF" >resume. </a>
+  <p style="text-align:center;" border-style:sold;> I have a proven ability  to learn &amp; an innate passion for service.  What interesting projects are you working? What inspired goals do you have? I want to help you &amp; your team bring them to life. <a href="contact.html" target="_blank">Contact</a> me &amp; download my <a href="resume.pdf" download="Yordanos' Resume PDF" >resume. </a>
   <p style="text-align:center; "><strong>Mini Resume:&nbsp;</strong> Software Development, CUNY: May 2020 <br>
     BS Psychology: UCF | Nursing: Orlando Tech <strong>&nbsp;</strong> <br>
     Certified Professional in Accessibility</p>
