--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                 
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/loveself.png" alt="">
+                    <!--    <img class="card-img-top" src="imgs/loveself.png" alt=""> -->
                         <div class="card-body">
                             <h5 class="card-title">LOVE SELF</h5>
                             <p class="card-text">Self love, self esteem, self regard and self care. What is it? Why be it? How to get there, stay stay there and feel ok with loving you self first and foremost.</p>
@@ -81,7 +81,7 @@
               
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/blog.png" alt="">
+                     <!--   <img class="card-img-top" src="imgs/blog.png" alt=""> -->
                         <div class="card-body">
                             <h5 class="card-title">BLOG</h5>
                             <p class="card-text">Lorem ipsum dolor, Lorem ipsum dolor, Lorem ipsum dolor, Lorem ipsum dolor Lorem ipsum dolor, Lorem ipsum dolor 
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/app1.jpeg" alt="">
+                   <!---     <img class="card-img-top" src="imgs/app1.jpeg" alt=""> -->
                         <div class="card-body">
                             <h5 class="card-title">First Thing</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/app2.jpeg" alt="">
+                    <!--    <img class="card-img-top" src="imgs/app2.jpeg" alt=""> -->
                         <div class="card-body">
                             <h5 class="card-title">Other Thing</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/app3.jpeg" alt="">
+                      <!--- <img class="card-img-top" src="imgs/app3.jpeg" alt=""> -->
                         <div class="card-body">
                             <h5 class="card-title">This Thing</h5>
                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
