--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 
                   <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src=" .png" alt="">
+                              <!---       <img class="card-img-top" src=" .png" alt=""> -->
                         <div class="card-body">
                             <h5 class="card-title">Social</h5>
                             <p class="card-text">Lorem ipsum dolor, Lorem ipsum dolor  what
@@ -83,7 +83,7 @@
               
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/.png" alt="">
+                                <!---     <img class="card-img-top" src="imgs/.png" alt=""> -->
                         <div class="card-body">
                             <h5 class="card-title">Social</h5>
                             <p class="card-text">Lorem ipsum dolor, Lorem ipsum dolor, Lorem ipsum dolor, 
@@ -102,7 +102,7 @@
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src=" " alt="">
+                       <!--- <img class="card-img-top" src=" " alt=""> -->
                         <div class="card-body">
                             <h5 class="card-title">Social</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, 
@@ -114,7 +114,7 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src=" " alt="">
+                              <!---       <img class="card-img-top" src=" " alt=""> -->
                         <div class="card-body">
                             <h5 class="card-title">Other Thing</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, 
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src=" " alt="">
+                     <!---   <img class="card-img-top" src=" " alt=""> -->
                         <div class="card-body">
                             <h5 class="card-title">This Thing</h5>
                            <p class="card-text">Lorem ipsum dolor sit amet, 
