--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@Yordanos11 
+Code Issues 0 Pull requests 0 Projects 0 Actions Wiki Security 0 Pulse Community
+yordanos11.github.io/index.html
+@Yordanos11 Yordanos11 ability typo
+3b600ba 19 hours ago
+316 lines (292 sloc)  8.41 KB
+  
+<!DOCTYPE html><hr>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
-  
+	text-align: center;
+ border-style:solid;
+    border-width: 0px;
+	
+    border-left-width: 0px;
+    border-right-width: 0px;
+    border-color: black;
+	padding: 0px;
+	margin: 0px;
   font-family: "Lato", sans-serif;
 }
 
@@ -23,7 +46,7 @@ body {
 .sidenav a {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 35px;
   color: #818181;
   display: block;
 }
@@ -34,8 +57,21 @@ body {
 
 .main {
   margin-left: 160px; /* Same as the width of the sidenav */
-  font-size: 28px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
+   margin-right: 0px; 
+	font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 60px 0px 60px;
+	  border-width: 1px;
+	
+	
+	border-style:solid;
+    border-width: 0px;
+	
+    border-left-width: 0px;
+    border-right-width: 0px;
+    border-color: black;
+
+
+  font-family: "Lato", sans-serif;
 }
 
 @media screen and (max-height: 450px) {
@@ -50,53 +86,248 @@ body {
  <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="portfolio.html" target="_blank">Portfolio</a>
-  <a href="resume.pdf">Resume</a>
+  <a href="resume.html">Resume</a>
   <a href="contact.html">Contact</a>
-    <a href="#skills">Skills</a>
+    <a href="skills.html">Skills</a>
 </div>
-
 <div class="main">
-    <h1 style="text-align:center;">Yordanos Mathewos</h1>
-<h2 style="text-align:center;">Software Engineer </h2>
- 
-  <p>Scroll down the page to see the result.</p>
-    
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>This sidebar is of full height (100%) and always shown.</p>
-  <p>Scroll down the page to see the result.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent finibus porttitor urna, a luctus ipsum vulputate non. Vivamus sit amet gravida lorem. Mauris porttitor feugiat vulputate. Suspendisse auctor mattis venenatis. Proin dapibus cursus neque, eu posuere nulla. Sed pretium et odio ut rutrum. Curabitur congue elit lorem, ac gravida lacus porta eu.
-<p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>This sidebar is of full height (100%) and always shown.</p>
-  <p>Scroll down the page to see the result.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent finibus porttitor urna, a luctus ipsum vulputate non. Vivamus sit amet gravida lorem. Mauris porttitor feugiat vulputate. Suspendisse auctor mattis venenatis. Proin dapibus cursus neque, eu posuere nulla. Sed pretium et odio ut rutrum. Curabitur congue elit lorem, ac gravida lacus porta eu.
-<p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>This sidebar is of full height (100%) and always shown.</p>
-  <p>Scroll down the page to see the result.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent finibus porttitor urna, a luctus ipsum vulputate non. Vivamus sit amet gravida lorem. Mauris porttitor feugiat vulputate. Suspendisse auctor mattis venenatis. Proin dapibus cursus neque, eu posuere nulla. Sed pretium et odio ut rutrum. Curabitur congue elit lorem, ac gravida lacus porta eu.
+	<h1>Yordanos Mathewos</h1>
+  <p style="text-align:center; border-style: solid;">Software Engineer |NYC| Experience Architect&nbsp; &nbsp; &nbsp;</p>
+  <p style="text-align:center; "><strong>I Build, Create &amp;&nbsp; Facilitate with Love.&nbsp; &nbsp;</strong></p>
+<hr>
+<p style="text-align:center;" border-style:sold;>&nbsp;</p>
+  <p style="text-align:center;" border-style:sold;>I’m Yordanos,  a software engineer. I live in New York. I am a fan of technology, design, and web development . I’m also interested in health, innovation and education. I have worked as a model, a nurse , an actor and a tech recruiter. I would like to use my extensive  &amp; diverse work experience to help bring your mission to completion.</p>
+  <p style="text-align:center;" border-style:sold;> I have a proven ability  to learn &amp; an innate passion for service.  What interesting projects are you working? What inspired goals do you have? I want to help you &amp; your team bring them to life. <a href="contact.html" target="_blank">Contact</a> me &amp; download my <a href="resume.pdf" download="Yordanos' Resume PDF" >resume. </a>
+  <p style="text-align:center; "><strong>Mini Resume:&nbsp;</strong> Software Development, CUNY: May 2020 <br>
+    BS Psychology: UCF | Nursing: Orlando Tech <strong>&nbsp;</strong> <br>
+    Certified Professional in Accessibility</p>
+  <p style="text-align:center;" border-style:sold;> </p>
+  <center>
+    <p style="text-align:center; border-style: solid;">&nbsp;</p>
+    <p>&nbsp;</p>
+    <p><span style="text-align:center;">&nbsp;</span></p>
+  </center>
+	<p style="text-align:center; border-style: solid;"><span style="text-align:center;">Software Engineer |NYC| Experience Architect&nbsp; &nbsp; &nbsp;</span></p>
+
+<p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+
+  <p style="text-align:center; border-style: solid;">&nbsp;</p>
+  <p>RESUME </p>
+  <p>&nbsp;</p>
+  <div title="Page 1">
+    <div>
+      <div>
+        <div>
+          <p>YORDANOS MATHEWOS </p>
+          <p> resume@mathewos.com </p>
+        </div>
+      </div>
+      <div>
+        <div>
+          <p>&nbsp;</p>
+          <p> EDUCATION:</p>
+          <p>Bachelor of Science in Psychology, University of Central Florida, Orlando, FL Practical Nursing, Orlando Tech, Orlando, FL<br/>
+            Applied Software Development, City University Of New York, New York, NY May 2020 Expected Completion </p>
+        </div>
+      </div>
+      <div>
+        <div>
+          <p>&nbsp;</p>
+          <p>CERTIFICATION: </p>
+          <hr>
+            Certified Professional in Accessibility, New York, NY </p>
+          <p>Registered Practical Nurse, New York State        </p>
+        </div>
+        <div>
+          <p>&nbsp;</p>
+          <p>EXPERIENCE:          </p>
+			<hr>
+          <p>New York Presbyterian Cornell </p>
+          <p>New York, NY        </p>
+          <p>&nbsp;</p>
+        </div>
+      </div>
+      <div>
+        <div>
+          <p>April 2017 – May 2019 </p>
+          <p>Patient Care Technician, Medical Surgical, 14 South          </p>
+          <p>• Perform routine patient care procedures, venipuncture, EKG, daily hygiene, collection of selected specimens.</p>
+          <p><br/>
+            •Make accurate and pertinent observations of patients&rsquo; conditions; report observations and communications to responsible nurse/provider. </p>
+          <p>&nbsp;</p>
+        </div>
+      </div>
+      <div>
+        <div>
+          <p>March 2015 – April 2017 </p>
+          <p>Nurse Aide, Neurosciences ICU, 2 South </p>
+          <p>•Measured, recorded patients' vital signs, such as temperature. </p>
+          <p>•Managed nightly bathing of Neuro ICU patients.<br/>
+            </p>
+          <p>•Assisted doctors  with examinations and procedures as need.</p>
+          <p>•Supplied environmental support and facilitated patient safety.</p>
+          <p>&nbsp;</p>
+
+        </div>
+        <div>
+          <p>Jos-el Care Nursing </p>
+          <p>New York, NY </p>
+          <p>LPN February 2013 – April 2015 </p>
+          <p>•Administered medications by oral, topical, subcutaneous, and intramuscular routes.</p>
+          <p><br/>
+            •Documented administration of medications and procedures in accordance with established charting protocol.</p>
+          <p><br/>
+            •Provided basic patient care or treatments, such as taking temperatures or blood pressures, dressing wounds, treating bedsores, giving enemas or douches, or performing catheterizations.</p>
+          <p><br/>
+            •Worked as part of a healthcare team to assess patient needs, plan and modify care, and implement interventions.</p>
+        </div>
+      </div>
+      <div>
+        <div>
+          <p>&nbsp;</p>
+          <p>Jay Kay Staffing</p>
+          <p> Orlando, FL </p>
+          <p>LPN March 2011 – December 2012 </p>
+          <p>•Measured and record vital signs, such as weight, temperature, blood pressure, pulse, and respiration.          </p>
+          <p>•Administered medications by oral, topical, subcutaneous, &amp; intramuscular routes.</p>
+          <p><br/>
+            •Assisted doctors with examinations and procedures as need.<br/>
+          </p>
+          <p>•Documented administration of medications &amp; procedures in accordance with established charting protocol. </p>
+          <p>• Sterilized equipment &amp; supplies, using germicides, sterilizer, or autoclave. </p>
+        </div>
+      </div>
+    </div>
+  </div>
+<p>&nbsp;</p>
+  <h3 style="text-align:center;">&nbsp;</h3>
+  <p></p>
+  <div>
+  <p>&nbsp;</p><p style="text-align:center; border-style: solid;">Software Engineer |NYC| Experience Architect&nbsp; &nbsp; &nbsp;</p>
+  </div>
+  <div>
+ <pre>SKILLS
+
+Javascript 
+Product Management
+Java
+Sales and Marketing
+iOS Development
+CSS
+Project Management
+Android
+MySQL
+Social Media Marketing
+HTML
+HTML5 & CSS3
+Web Development
+Business Strategy
+Linux
+Business Operations
+Sales Strategy and Management
+Graphic Design
+Product Marketing
+Agile
+User Experience Design
+Query
+Web Design
+Fundraising
+Agile methodology
+Product
+SCRUM
+Online Marketing
+System Integration
+Mobile 
+User Interface Design
+Objective 
+
+Project Manager 
+QA Tester
+QA Engineer
+User Researcher
+Creative Director
+Software Engineer
+Frontend Engineer
+Mobile Developer
+Software Architect
+UI/UX Designer
+Data Scientist
+
+PREFERRED LOCATION
+
+Silicon Valley
+Europe
+San Francisco
+London
+Los Angeles
+Boston
+Toronto
+Texas
+France
+Austin
+Chicago
+Mumbai
+Palo Alto
+Seattle
+Berlin
+Vancouver
+Washington DC
+Netherlands
+Denver
+San Diego
+Spain
+Switzerland
+Cambridge
+Orange County
+Italy
+Portland
+Dallas
+Austria
+Belgium
+Denmark
+Houston
+Boulder
+New Delhi
+Ireland
+Poland
+Delhi
+Sweden
+Estonia
+Portugal
+Phoenix
+Pasadena
+
+WOULD CONSIDER
+
+Full-Stack Engineer
+Backend Engineer
+Sales
+Business Development
+Marketing
+Sales Development Representative
+DevOps
+Growth Hacker
+Marketing Manager
+Product Manager
+Engineering Manager
+Account Executive
+Account Manager
+Sales Manager
+Designer
+Content Creator
+BD Manager
+Visual Designer
 
 
+ </pre>
 </div>
-   
+</div>
+	
+	<footer>
+		<p style="text-align:center; border-style: solid;">Yordanos Mathewos 2020</p></footer>
 </body>
 </html> 
+© 2020 Yordanos Mathewos
+
