--- a/index.html
+++ b/index.html
@@ -1,19 +1,5 @@
-Skip to content
-Search or jump to…
 
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@Yordanos11 
-Code Issues 0 Pull requests 0 Projects 0 Actions Wiki Security 0 Pulse Community
-yordanos11.github.io/index.html
-@Yordanos11 Yordanos11 ability typo
-3b600ba 19 hours ago
-316 lines (292 sloc)  8.41 KB
-  
-<!DOCTYPE html><hr>
+  <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
