--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
  <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="portfolio.html" target="_blank">Portfolio</a>
-  <a href="resume.html">Resume</a>
+  <a href="resume.doc">Resume</a>
   <a href="contact.html">Contact</a>
     <a href="skills.html">Skills</a>
 </div>
