--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 </head>
    <body>
 
-        <nav class="navbar bg-light navbar-light">
+        <nav class="navbar bg-dark navbar-dark">
         <div class="container">
             <a href="" class="navbar-brand"><i class="fas fa-heart mr-2"></i>YMB</a>
               
