--- a/portfolio.html
+++ b/portfolio.html
@@ -23,11 +23,11 @@
 </head>
       <body>
 
-        <nav class="navbar bg-light navbar-light">
+        <nav class="navbar bg-dark navbar-dark">
         <div class="container">
             <a href="" class="navbar-brand"><i class="fas fa-heart mr-2"></i>YMB</a>
               
-                    <!--  <a class="nav-link" href="home.html">Home</a>
+               <a class="nav-link" href="index.html">Home</a>
               <!-- <a class="nav-link" href="portfolio_final.html">Portfinal</a> -->
              <a class="nav-link" href="portfolio.html">Portfolio</a>
               <a class="nav-link" href="resume.html">Resume</a>
@@ -40,7 +40,7 @@
   
 
     <section id="header" class="jumbotron text-center">
-        <h1 class="display-3">Yordanos' Projects Home&nbsp;</h1>
+        <h1 class="display-3">Yordanos' Projects&nbsp;</h1>
         <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
         <a href="contact.html" class="btn btn-primary">&nbsp; Connect With Me&nbsp; &nbsp;&nbsp;</a>
     <a href="resume.pdf" target="_blank" class="btn btn-success">&nbsp; Download Resume&nbsp; &nbsp;</a>
@@ -106,7 +106,7 @@
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                                 Veniam, dolorum facere?
                                 Commodi, ut. Et, itaque quam!</p>
-                            <a href="" class="btn btn-outline-success btn-sm">Look</a>
+                            <a href="" class="btn btn-outline-success btn-sm">Coming Soon</a>
                             <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                                 Veniam, dolorum facere?
                                </p>
-                            <a href="" class="btn btn-outline-success btn-sm">Look</a>
+                            <a href="" class="btn btn-outline-success btn-sm">Coming Soon</a>
                        <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                                 Veniam, dolorum facere? consectetur adipisicing elit. 
                                 Veniam, dolorum facere?
                            </p>
-                            <a href="" class="btn btn-outline-success btn-sm">Look</a>
+                            <a href="" class="btn btn-outline-success btn-sm">Coming Soon</a>
                             <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
                         </div>
                     </div>
