--- a/skills.html
+++ b/skills.html
@@ -70,7 +70,7 @@
                 
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src=".png" alt="">
+                      <!--  <img class="card-img-top" src=".png" alt=""> -->
                         <div class="card-body">
                           <h2 class="card-title"> HTML&nbsp;</h2>
 <p class="card-text">&nbsp; </p>
@@ -82,7 +82,7 @@
               
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/.png" alt="">
+                      <!--  <img class="card-img-top" src=".png" alt=""> -->
                         <div class="card-body">
                           <h2 class="card-title"> JavaScript&nbsp;</h2>
 <p class="card-text">&nbsp; 
@@ -101,7 +101,7 @@
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src=" " alt="">
+                     <!--  <img class="card-img-top" src=".png" alt=""> -->
                         <div class="card-body">
                           <h2 class="card-title"> Dreamweaver&nbsp;&nbsp;</h2>
 <p class="card-text">&nbsp; 
