--- a/skills.html
+++ b/skills.html
@@ -55,7 +55,7 @@
                 
                   <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img class="card-img-top" src=" .png" alt="">
+                       <!-- <img class="card-img-top" src=" .png" alt=""> -->
                         <div class="card-body">
                           <h2 class="card-title"> CSS&nbsp;</h2>
 <p class="card-text">&nbsp;
