--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 
     <section id="header" class="jumbotron text-center">
         <h1 class="display-3">Yordanos' Projects&nbsp;</h1>
-        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
+       <!-- <p class="lead" </p>  -->
         <a href="contact.html" class="btn btn-primary">&nbsp; Connect With Me&nbsp; &nbsp;&nbsp;</a>
     <a href="resume.pdf" target="_blank" class="btn btn-success">&nbsp; Download Resume&nbsp; &nbsp;</a>
     </section>
