--- a/portfolio.html
+++ b/portfolio.html
@@ -135,7 +135,8 @@
                            </p>
                             <a href="" class="btn btn-outline-success btn-sm">Coming Soon</a>
                             <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
-                    
+                        </div>
+          
                 </div>
             </div>
        </div>
