--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     </style>
 
     <title>Yordanos' Web App Developer Portfolio</title>
-</head>           
+</head>
       <body>
 
         <nav class="navbar bg-dark navbar-dark">
@@ -41,7 +41,7 @@
 
     <section id="header" class="jumbotron text-center">
         <h1 class="display-3">Yordanos' Projects&nbsp;</h1>
-       <!-- <p class="lead" </p>  -->
+        <p class="lead"></p>
         <a href="contact.html" class="btn btn-primary">&nbsp; Connect With Me&nbsp; &nbsp;&nbsp;</a>
     <a href="resume.pdf" target="_blank" class="btn btn-success">&nbsp; Download Resume&nbsp; &nbsp;</a>
     </section>
@@ -111,18 +111,6 @@
                         </div>
                     </div>
                 </div>
-		       <div class="col-lg-4 mb-4">
-                    <div class="card">
-                        <img class="card-img-top" src="imgs/Screenshot_1590036420.png" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">This Thing</h5>
-                           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                                Veniam, dolorum facere? consectetur adipisicing elit. 
-                                Veniam, dolorum facere?
-                           </p>
-                            <a href="" class="btn btn-outline-success btn-sm">Coming Soon</a>
-                            <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
-                        </div>
                 <div class="col-lg-4 mb-4">
                     <div class="card">
                         <img class="card-img-top" src="imgs/app2.jpeg" alt="">
@@ -136,8 +124,20 @@
                         </div>
                     </div>
                 </div>
-              
-             
+                <div class="col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/app3.jpeg" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">This Thing</h5>
+                           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                Veniam, dolorum facere? consectetur adipisicing elit. 
+                                Veniam, dolorum facere?
+                           </p>
+                            <a href="" class="btn btn-outline-success btn-sm">Coming Soon</a>
+                            <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
+                        </div>
+                    </div>
+                </div>
             </div>
        </div>
     </section>
