--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
        </div>
     </section>
         
-        <section>
+    <!---    <section>
        <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
@@ -133,7 +133,7 @@
                                 Veniam, dolorum facere?
                            </p>
                             <a href="" class="btn btn-outline-success btn-sm">Look</a>
-                            <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> -->
+                            <!--  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a> 
                         </div>
                     </div>
                 </div>
